Start implementing CSS

--- a/recipes/peach-cobbler.html
+++ b/recipes/peach-cobbler.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Peach Cobbler</title>
+    <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
     <h1>Peach Cobbler</h1>
@@ -29,7 +30,7 @@
       writting is hard to read, so some steps may be off.
     </p>
 
-    <h3>Step 1</h3>
+    <h2>Step 1</h2>
     <ul>
       <li>10 ripe peaches</li>
       <li>1 cup sugar</li>
@@ -43,7 +44,7 @@
       minutes.
     </p>
 
-    <h3>Step 2</h3>
+    <h2>Step 2</h2>
     <ul>
       <li>1/2 cup of butter</li>
     </ul>
@@ -52,7 +53,7 @@
       and melt in oven while it is preheating.
     </p>
 
-    <h3>Step 3</h3>
+    <h2>Step 3</h2>
     <ul>
       <li>2 cups all purpose flour</li>
       <li>1 1/4 tsp baking powder</li>
@@ -66,7 +67,7 @@
       stir just until dough holds together.
     </p>
 
-    <h3>Step 4</h3>
+    <h2>Step 4</h2>
     <ul>
       <li>1/2 cup butter</li>
       <li>1 cup all purpose flour</li>
@@ -76,7 +77,7 @@
     </ul>
     <p>Mix above ingredients together. Stir in milk.</p>
 
-    <h3>Step 5</h3>
+    <h2>Step 5</h2>
     <p>
       Remove pan of melted butter from over. Pour mixture from Step 4 into pan
       but do not stir. Spread mixture from Step 1 onto batter. Drain mixture
