--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="index-list">
       <li><a href="./recipes/peach-cobbler.html">Peach Cobbler</a></li>
       <li><a href="./recipes/blueberry-muffins.html">Blueberry Muffins</a></li>
       <li>
