Add CSS after learning box model

--- a/recipes/peach-cobbler.html
+++ b/recipes/peach-cobbler.html
@@ -7,83 +7,85 @@
     <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
-    <h1>Peach Cobbler</h1>
-    <img src="../images/peach-cobbler.webp" />
+    <div class="content">
+      <h1>Peach Cobbler</h1>
+      <img src="../images/peach-cobbler.webp" />
 
-    <h2>Description</h2>
-    <p>
-      Peach cobbler is a classic American dessert that typically consists of
-      baked peaches topped with a sweet biscuit-like crust. It's a popular
-      dessert in the southern United States, especially during the summer months
-      when peaches are in season.
-    </p>
-    <p>
-      Peach cobbler is typically served warm, either on its own or with a scoop
-      of vanilla ice cream or a dollop of whipped cream. It has a comforting,
-      homey taste and texture, with the sweetness of the peaches complemented by
-      the slightly crunchy and buttery crust. It's a delightful dessert that
-      showcases the natural flavors of fresh peaches and is enjoyed by many as a
-      comforting and delicious treat.
-    </p>
-    <p>
-      The below recipe is from my mom's own handwritten recipe. Some of her
-      writting is hard to read, so some steps may be off.
-    </p>
+      <h2>Description</h2>
+      <p>
+        Peach cobbler is a classic American dessert that typically consists of
+        baked peaches topped with a sweet biscuit-like crust. It's a popular
+        dessert in the southern United States, especially during the summer
+        months when peaches are in season.
+      </p>
+      <p>
+        Peach cobbler is typically served warm, either on its own or with a
+        scoop of vanilla ice cream or a dollop of whipped cream. It has a
+        comforting, homey taste and texture, with the sweetness of the peaches
+        complemented by the slightly crunchy and buttery crust. It's a
+        delightful dessert that showcases the natural flavors of fresh peaches
+        and is enjoyed by many as a comforting and delicious treat.
+      </p>
+      <p>
+        The below recipe is from my mom's own handwritten recipe. Some of her
+        writting is hard to read, so some steps may be off.
+      </p>
 
-    <h2>Step 1</h2>
-    <ul>
-      <li>10 ripe peaches</li>
-      <li>1 cup sugar</li>
-      <li>1 cup corn starch</li>
-      <li>1 tsp grated lemon peel</li>
-      <li>1 tbsp lemon juice</li>
-      <li>1 tsp vanilla extract</li>
-    </ul>
-    <p>
-      In a large bowl, mix the above together several times. Let stand for 30
-      minutes.
-    </p>
+      <h2>Step 1</h2>
+      <ul>
+        <li>10 ripe peaches</li>
+        <li>1 cup sugar</li>
+        <li>1 cup corn starch</li>
+        <li>1 tsp grated lemon peel</li>
+        <li>1 tbsp lemon juice</li>
+        <li>1 tsp vanilla extract</li>
+      </ul>
+      <p>
+        In a large bowl, mix the above together several times. Let stand for 30
+        minutes.
+      </p>
 
-    <h2>Step 2</h2>
-    <ul>
-      <li>1/2 cup of butter</li>
-    </ul>
-    <p>
-      Preheat over to 350 degrees Fahrenheit. Place butter in a 9x13 inch pan
-      and melt in oven while it is preheating.
-    </p>
+      <h2>Step 2</h2>
+      <ul>
+        <li>1/2 cup of butter</li>
+      </ul>
+      <p>
+        Preheat over to 350 degrees Fahrenheit. Place butter in a 9x13 inch pan
+        and melt in oven while it is preheating.
+      </p>
 
-    <h2>Step 3</h2>
-    <ul>
-      <li>2 cups all purpose flour</li>
-      <li>1 1/4 tsp baking powder</li>
-      <li>1/2 tsp ground nutmeg</li>
-      <li>2/3 cup butter</li>
-      <li>2/3 cup heavy cream</li>
-    </ul>
-    <p>
-      Combine all the above 1st 4 ingredients. Combine butter into the mixture
-      using your hands until mixture is a crumble-like texture. Add cream and
-      stir just until dough holds together.
-    </p>
+      <h2>Step 3</h2>
+      <ul>
+        <li>2 cups all purpose flour</li>
+        <li>1 1/4 tsp baking powder</li>
+        <li>1/2 tsp ground nutmeg</li>
+        <li>2/3 cup butter</li>
+        <li>2/3 cup heavy cream</li>
+      </ul>
+      <p>
+        Combine all the above 1st 4 ingredients. Combine butter into the mixture
+        using your hands until mixture is a crumble-like texture. Add cream and
+        stir just until dough holds together.
+      </p>
 
-    <h2>Step 4</h2>
-    <ul>
-      <li>1/2 cup butter</li>
-      <li>1 cup all purpose flour</li>
-      <li>1 cup white sugar</li>
-      <li>1 tsp baking powder</li>
-      <li>1 cup milk</li>
-    </ul>
-    <p>Mix above ingredients together. Stir in milk.</p>
+      <h2>Step 4</h2>
+      <ul>
+        <li>1/2 cup butter</li>
+        <li>1 cup all purpose flour</li>
+        <li>1 cup white sugar</li>
+        <li>1 tsp baking powder</li>
+        <li>1 cup milk</li>
+      </ul>
+      <p>Mix above ingredients together. Stir in milk.</p>
 
-    <h2>Step 5</h2>
-    <p>
-      Remove pan of melted butter from over. Pour mixture from Step 4 into pan
-      but do not stir. Spread mixture from Step 1 onto batter. Drain mixture
-      from Step 1 of excess syrup before spreading on the batter. Crumble
-      mixture from Step 3 evenly over fruit.
-    </p>
-    <p>Bake at 350 degrees Fahrenheit for 60 minutes.</p>
+      <h2>Step 5</h2>
+      <p>
+        Remove pan of melted butter from over. Pour mixture from Step 4 into pan
+        but do not stir. Spread mixture from Step 1 onto batter. Drain mixture
+        from Step 1 of excess syrup before spreading on the batter. Crumble
+        mixture from Step 3 evenly over fruit.
+      </p>
+      <p>Bake at 350 degrees Fahrenheit for 60 minutes.</p>
+    </div>
   </body>
 </html>
