--- a/index.html
+++ b/index.html
@@ -7,15 +7,28 @@
     <link rel="stylesheet" href="./styles.css" />
   </head>
   <body>
-    <h1>Odin Recipes</h1>
-    <ul class="index-list">
-      <li><a href="./recipes/peach-cobbler.html">Peach Cobbler</a></li>
-      <li><a href="./recipes/blueberry-muffins.html">Blueberry Muffins</a></li>
-      <li>
-        <a href="./recipes/chocolate-chip-cookies.html"
-          >Chocolate Chip Cookies</a
-        >
-      </li>
-    </ul>
+    <div class="content">
+      <h1>Odin Recipes</h1>
+      <p>
+        Hi! My name is Joshua, and I am using this website to show off my recipe
+        project from
+        <a href="https://www.theodinproject.com/">The Odin Project</a>. The Odin
+        Project is a free, open-source web development curriculum that offers
+        project-based learning to help individuals acquire practical skills in
+        programming. Below are a few of the recipes I have placed in this
+        website:
+      </p>
+      <ul class="index-list">
+        <li><a href="./recipes/peach-cobbler.html">Peach Cobbler</a></li>
+        <li>
+          <a href="./recipes/blueberry-muffins.html">Blueberry Muffins</a>
+        </li>
+        <li>
+          <a href="./recipes/chocolate-chip-cookies.html"
+            >Chocolate Chip Cookies</a
+          >
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
