--- a/recipes/blueberry-muffins.html
+++ b/recipes/blueberry-muffins.html
@@ -7,70 +7,72 @@
     <link rel="stylesheet" href="../styles.css" />
   </head>
   <body>
-    <h1>Blueberry Muffins</h1>
-    <img src="../images/blueberry-muffins.jpg" />
+    <div class="content">
+      <h1>Blueberry Muffins</h1>
+      <img src="../images/blueberry-muffins.jpg" />
 
-    <h2>Description</h2>
-    <p>
-      These blueberry muffins are extra large and yummy with a sugary-cinnamon
-      crumb topping. I usually double the recipe and fill the muffin cups just
-      to the top for a wonderful, extra-generously-sized, deli-style muffin. Add
-      extra blueberries if you want!
-    </p>
-    <p>
-      This blueberry muffin recipe is moist, sweet, and bursting with fruity
-      flavor. A buttery streusel topping takes this indulgent breakfast over the
-      top.
-    </p>
+      <h2>Description</h2>
+      <p>
+        These blueberry muffins are extra large and yummy with a sugary-cinnamon
+        crumb topping. I usually double the recipe and fill the muffin cups just
+        to the top for a wonderful, extra-generously-sized, deli-style muffin.
+        Add extra blueberries if you want!
+      </p>
+      <p>
+        This blueberry muffin recipe is moist, sweet, and bursting with fruity
+        flavor. A buttery streusel topping takes this indulgent breakfast over
+        the top.
+      </p>
 
-    <h2>Ingredients</h2>
-    <h3>Muffins:</h3>
-    <ul>
-      <li>1 1/2 cups all-purpose flour</li>
-      <li>3/4 cup white sugar</li>
-      <li>2 teaspoons baking powder</li>
-      <li>1/2 teaspoon salt</li>
-      <li>1/3 cup vegetable oil</li>
-      <li>1 egg</li>
-      <li>1/3 cup milk, or more as needed</li>
-      <li>1 cup fresh blueberries</li>
-    </ul>
-    <h3>Crumb Topping:</h3>
-    <ul>
-      <li>1/2 cup white sugar</li>
-      <li>1/3 cup all-purpose flour</li>
-      <li>1/4 cup butter, cubed</li>
-      <li>1 1/2 teaspoons ground cinnamon</li>
-    </ul>
+      <h2>Ingredients</h2>
+      <h3>Muffins:</h3>
+      <ul>
+        <li>1 1/2 cups all-purpose flour</li>
+        <li>3/4 cup white sugar</li>
+        <li>2 teaspoons baking powder</li>
+        <li>1/2 teaspoon salt</li>
+        <li>1/3 cup vegetable oil</li>
+        <li>1 egg</li>
+        <li>1/3 cup milk, or more as needed</li>
+        <li>1 cup fresh blueberries</li>
+      </ul>
+      <h3>Crumb Topping:</h3>
+      <ul>
+        <li>1/2 cup white sugar</li>
+        <li>1/3 cup all-purpose flour</li>
+        <li>1/4 cup butter, cubed</li>
+        <li>1 1/2 teaspoons ground cinnamon</li>
+      </ul>
 
-    <h2>Steps</h2>
-    <ol>
-      <li>
-        Preheat the oven to 400 degrees F (200 degrees C). Grease 8 muffin cups
-        or line with paper liners.
-      </li>
-      <li>
-        For the muffins: Whisk flour, sugar, baking powder, and salt together in
-        a large bowl.
-      </li>
-      <li>
-        Pour oil into a small liquid measuring cup. Add egg and enough milk to
-        reach the 1-cup mark; stir until combined. Pour into flour mixture and
-        mix just until batter is combined. Fold in blueberries; set batter
-        aside.
-      </li>
-      <li>
-        For the crumb topping: Combine sugar, flour, butter, and cinnamon in a
-        small bowl. Mix with a fork until crumbly.
-      </li>
-      <li>
-        Spoon batter into the prepared muffin cups, filling right to the top.
-        Sprinkle with crumb topping.
-      </li>
-      <li>
-        Bake in the preheated oven until a toothpick inserted in the center of a
-        muffin comes out clean, 20 to 25 minutes.
-      </li>
-    </ol>
+      <h2>Steps</h2>
+      <ol>
+        <li>
+          Preheat the oven to 400 degrees F (200 degrees C). Grease 8 muffin
+          cups or line with paper liners.
+        </li>
+        <li>
+          For the muffins: Whisk flour, sugar, baking powder, and salt together
+          in a large bowl.
+        </li>
+        <li>
+          Pour oil into a small liquid measuring cup. Add egg and enough milk to
+          reach the 1-cup mark; stir until combined. Pour into flour mixture and
+          mix just until batter is combined. Fold in blueberries; set batter
+          aside.
+        </li>
+        <li>
+          For the crumb topping: Combine sugar, flour, butter, and cinnamon in a
+          small bowl. Mix with a fork until crumbly.
+        </li>
+        <li>
+          Spoon batter into the prepared muffin cups, filling right to the top.
+          Sprinkle with crumb topping.
+        </li>
+        <li>
+          Bake in the preheated oven until a toothpick inserted in the center of
+          a muffin comes out clean, 20 to 25 minutes.
+        </li>
+      </ol>
+    </div>
   </body>
 </html>
