--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <body>
     <div class="content">
       <h1>Odin Recipes</h1>
+
+      <img src="/images/pikachu.gif" />
       <p>
         Hi! My name is Joshua, and I am using this website to show off my recipe
         project from
