--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -9,7 +9,7 @@
   <body>
     <div class="content">
       <h1>Chocolate Chip Cookies</h1>
-      <img src="../images/chocolate-chip-cookies.jpg" />
+      <img class="food" src="../images/chocolate-chip-cookies.jpg" />
       <h2>Description</h2>
       <p>
         This chocolate chip cookie recipe is truly the best. These chocolate
