--- a/recipes/peach-cobbler.html
+++ b/recipes/peach-cobbler.html
@@ -9,7 +9,7 @@
   <body>
     <div class="content">
       <h1>Peach Cobbler</h1>
-      <img src="../images/peach-cobbler.webp" />
+      <img class="food" src="../images/peach-cobbler.webp" />
 
       <h2>Description</h2>
       <p>
@@ -26,10 +26,7 @@
         delightful dessert that showcases the natural flavors of fresh peaches
         and is enjoyed by many as a comforting and delicious treat.
       </p>
-      <p>
-        The below recipe is from my mom's own handwritten recipe. Some of her
-        writting is hard to read, so some steps may be off.
-      </p>
+      <p>The below recipe is actually from my mom's own handwritten recipe.</p>
 
       <h2>Step 1</h2>
       <ul>
