Fix GIF in index and add alt text

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <div class="content">
       <h1>Odin Recipes</h1>
 
-      <img src="/images/pikachu.gif" />
+      <img
+        src="https://i.pinimg.com/originals/60/ff/37/60ff3721eeb7e12f16d11d1fd927ecc4.gif"
+        alt="Pikachu waving"
+      />
       <p>
         Hi! My name is Joshua, and I am using this website to show off my recipe
         project from
