--- a/recipes/blueberry-muffins.html
+++ b/recipes/blueberry-muffins.html
@@ -9,7 +9,11 @@
   <body>
     <div class="content">
       <h1>Blueberry Muffins</h1>
-      <img class="food" src="../images/blueberry-muffins.jpg" />
+      <img
+        class="food"
+        src="../images/blueberry-muffins.jpg"
+        alt="Blueberry muffins"
+      />
 
       <h2>Description</h2>
       <p>
