--- a/recipes/chocolate-chip-cookies.html
+++ b/recipes/chocolate-chip-cookies.html
@@ -9,7 +9,11 @@
   <body>
     <div class="content">
       <h1>Chocolate Chip Cookies</h1>
-      <img class="food" src="../images/chocolate-chip-cookies.jpg" />
+      <img
+        class="food"
+        src="../images/chocolate-chip-cookies.jpg"
+        alt="Chocolate chip cookies"
+      />
       <h2>Description</h2>
       <p>
         This chocolate chip cookie recipe is truly the best. These chocolate
