--- a/recipes/peach-cobbler.html
+++ b/recipes/peach-cobbler.html
@@ -9,7 +9,11 @@
   <body>
     <div class="content">
       <h1>Peach Cobbler</h1>
-      <img class="food" src="../images/peach-cobbler.webp" />
+      <img
+        class="food"
+        src="../images/peach-cobbler.webp"
+        alt="Peach cobbler"
+      />
 
       <h2>Description</h2>
       <p>
